RESOLVED FIXED123936
Nothing should return std::unique_ptr<InlineBox>.
https://bugs.webkit.org/show_bug.cgi?id=123936
Summary Nothing should return std::unique_ptr<InlineBox>.
Andreas Kling
Reported 2013-11-06 16:17:25 PST
We have some functions that return owned InlineBox pointers. We don't need to be that generic, they should return InlineElementBoxes.
Attachments
Patch (5.53 KB, patch)
2013-11-06 16:18 PST, Andreas Kling
no flags
Patch (5.72 KB, patch)
2013-11-06 16:19 PST, Andreas Kling
andersca: review+
commit-queue: commit-queue-
Andreas Kling
Comment 1 2013-11-06 16:18:01 PST
Andreas Kling
Comment 2 2013-11-06 16:19:20 PST
WebKit Commit Bot
Comment 3 2013-11-06 17:42:27 PST
Comment on attachment 216238 [details] Patch Rejecting attachment 216238 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 216238, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: in the changes. Patch failed at 0001 Encoded object stream should be sequential The copy of the patch that failed is found in: /Volumes/Data/EWS/Webkit/.git/rebase-apply/patch When you have resolved this problem, run "git rebase --continue". If you prefer to skip this patch, run "git rebase --skip" instead. To check out the original branch and stop rebasing, run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 123. Full output: http://webkit-queues.appspot.com/results/22638044
Andreas Kling
Comment 4 2013-11-06 19:28:21 PST
Note You need to log in before you can comment on or make changes to this bug.