Nothing should return std::unique_ptr<InlineBox>. <https://webkit.org/b/123936>

Made RenderBox, RenderLineBreak and RenderListMarker return tightly
typed InlineElementBoxes instead.

Reviewed by Anders Carlsson.

Canonical link: https://commits.webkit.org/142127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158811 268f45cc-cd09-0410-ab3c-d52691b4dbfc