Source/WebCore/rendering/RenderListMarker.cpp
@@ -28,6 +28,7 @@
 #include "Document.h"
 #include "Font.h"
 #include "GraphicsContext.h"
+#include "InlineElementBox.h"
 #include "RenderLayer.h"
 #include "RenderListItem.h"
 #include "RenderView.h"
@@ -1148,7 +1149,7 @@ void RenderListMarker::styleDidChange(StyleDifference diff, const RenderStyle* o
     }
 }
 
-std::unique_ptr<InlineBox> RenderListMarker::createInlineBox()
+std::unique_ptr<InlineElementBox> RenderListMarker::createInlineBox()
 {
     auto box = RenderBox::createInlineBox();
     box->setBehavesLikeText(isText());
